[gd_scene load_steps=25 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://assets/hero.png" type="Texture" id=2]
[ext_resource path="res://assets/hero_run.png" type="Texture" id=3]
[ext_resource path="res://assets/dagger.png" type="Texture" id=4]
[ext_resource path="res://assets/conquest_arrow_64.png" type="Texture" id=5]
[ext_resource path="res://assets/famine_coin.png" type="Texture" id=6]
[ext_resource path="res://assets/war_64.png" type="Texture" id=7]
[ext_resource path="res://assets/retry.png" type="Texture" id=8]
[ext_resource path="res://assets/song.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/hit.wav" type="AudioStream" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18, 28 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "run",
"speed": 8.0
} ]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 1, 0.0392157, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_bottom_right = 50
corner_detail = 1
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 0.588235 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_bottom_right = 50
corner_detail = 1

[sub_resource type="Curve" id=9]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, -360 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="Curve" id=11]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=12]
curve = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=13]
emission_shape = 2
emission_box_extents = Vector3( 10, 10, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 70.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 45.0
angle_random = 1.0
angle_curve = SubResource( 10 )
scale = 10.0
scale_random = 1.0
scale_curve = SubResource( 12 )
color = Color( 0.909804, 0, 0, 1 )

[sub_resource type="Animation" id=14]
resource_name = "retry"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"player",
]]
position = Vector2( 0, 4.03099 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "run"
frame = 1
playing = true

[node name="ShootPosition" type="Position2D" parent="."]
position = Vector2( 31.0688, 0 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 320.0
margin_bottom = 40.0
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapons" type="HBoxContainer" parent="CanvasLayer"]
margin_left = 22.895
margin_top = 45.1725
margin_right = 162.895
margin_bottom = 113.173
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dagger" type="MarginContainer" parent="CanvasLayer/Weapons"]
margin_right = 68.0
margin_bottom = 68.0
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Weapons/Dagger"]
margin_left = 2.0
margin_top = 2.0
margin_right = 66.0
margin_bottom = 66.0
color = Color( 0, 1, 1, 0.588235 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Weapons/Dagger"]
margin_left = 2.0
margin_top = 2.0
margin_right = 66.0
margin_bottom = 66.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow" type="MarginContainer" parent="CanvasLayer/Weapons"]
margin_left = 72.0
margin_right = 140.0
margin_bottom = 68.0
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Weapons/Arrow"]
margin_left = 2.0
margin_top = 2.0
margin_right = 66.0
margin_bottom = 66.0
color = Color( 1, 1, 1, 0.588235 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Weapons/Arrow"]
margin_left = 2.0
margin_top = 2.0
margin_right = 66.0
margin_bottom = 66.0
texture = ExtResource( 5 )

[node name="Sword" type="MarginContainer" parent="CanvasLayer/Weapons"]
margin_left = 144.0
margin_right = 212.0
margin_bottom = 68.0
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Weapons/Sword"]
margin_left = 2.0
margin_top = 2.0
margin_right = 66.0
margin_bottom = 66.0
color = Color( 1, 1, 1, 0.588235 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Weapons/Sword"]
margin_left = 2.0
margin_top = 2.0
margin_right = 66.0
margin_bottom = 66.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coin" type="MarginContainer" parent="CanvasLayer/Weapons"]
margin_left = 216.0
margin_right = 284.0
margin_bottom = 68.0
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Weapons/Coin"]
margin_left = 2.0
margin_top = 2.0
margin_right = 66.0
margin_bottom = 66.0
color = Color( 1, 1, 1, 0.588235 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Weapons/Coin"]
margin_left = 2.0
margin_top = 2.0
margin_right = 66.0
margin_bottom = 66.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hit" type="Particles2D" parent="."]
emitting = false
amount = 30
lifetime = 0.5
one_shot = true
explosiveness = 0.8
local_coords = false
process_material = SubResource( 13 )

[node name="Retry" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="ColorRect" type="ColorRect" parent="Retry"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Retry"]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -50.0
margin_bottom = 50.0
size_flags_vertical = 0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Retry"]
anims/retry = SubResource( 14 )

[node name="song" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -15.0
autoplay = true

[node name="HitAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -15.0
[connection signal="gui_input" from="Retry/TextureRect" to="." method="_on_TextureRect_gui_input"]
